tests/snapshots/run_wpt_conformance__trtx_triangular_float16_4D_tensor_fully_zero_options_upper_false_options_diagonal_-2.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float16 4D tensor fully zero options.upper=false options.diagonal=-2",
    "trtx",
    "PASS",
)
